2000-02-18  Stefan Monnier  <monnier@cs.yale.edu>

	* sml-util.el (make-temp-dir, make-temp-file, temp-file-dir,
	  delete-temp-dirs): Replaced by the make-temp-file from Emacs-21.
	(custom-create-map): add :group arg and allow key to be a list.
	(define-major-mode): Removed (use define-derived-mode instead).
	(sml-builtin-nested-comments-flag): New var.

	* sml-proc.el (sml-host-name): New var.
	(sml-make-file-name): Replaced by `sml-compile-commands'.
	(sml-config-file): New var.
	(sml-compile-commands-alist): New var.
	(inferior-sml-load-hook): Removed.
	(sml-buffer): Query if the current buffer is not a *sml*.
	(inferior-sml-mode): Use minor-mode-overriding-map-alist to disable
	  compilation-minor-mode's keybindings.
	(run-sml): Turn into an alias for sml-run.
	(sml-run): Query the user for the command.  If prefix is set (or if
	  default value is not null) query for args and host.  Use `split-string'
	  rather than our own function.  Run cmd on another host if requested and
	  pass it an init file if it exists.  Pop to the buffer at the end.
	(sml-args-to-list): Remove.
	(sml-compile): Look for special files (sml-compile-command-alist) in
	  the current dir (and its parents) to choose a default command.  Remember
	  the command for next time in the same buffer.  Make the `cd' explicit in
	  the command so the user can change it.
	(sml-make-error): Fix for when `endline' is absent.

	* sml-mode.el: Pass it rhough checkdoc.
	(sml-mode-version): Remove.
	(sml-load-hook): Remove.
	(sml-mode-info): Use `info' rather than `Info-goto-node'.
	(sml-keywords-regexp): Add "o".
	(sml-syntax-prop-table): Use `defsyntax'.
	(sml-font-lock-syntactic-keywords): Only use nested comments if supported.
	(sml-mode): Use `define-derived-mode'.
	(sml-electric-pipe): `sml-indent-line' -> `indent-according-to-mode'.
	(sml-indent-line): Use `indent-line-to'.
	(sml-cm-mode): New mode for CM files.

	* Makefile: Update.

	* sml-mode-startup.el: Remove since it's now autogenerated.
